made all my parts

--- a/Freesia2/nbproject/project.properties
+++ b/Freesia2/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Freesia2
+application.vendor=user
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,20 @@ dist.jar=${dist.dir}/Freesia2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Freesia2
+endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\user\\Desktop\\activation.jar
 file.reference.jdbc-local-1.0.0.final-sources.jar=C:\\Users\\user\\Desktop\\jdbc-local-1.0.0.final-sources.jar
+file.reference.mail.jar=C:\\Users\\user\\Desktop\\mail.jar
 file.reference.mysql-connector-java-5.1.16.jar=C:\\Users\\user\\Desktop\\mysql-connector-java-5.1.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.16.jar}:\
     ${file.reference.jdbc-local-1.0.0.final-sources.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
