--- a/Freesia2/nbproject/private/private.properties
+++ b/Freesia2/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.jdbc-local-1.0.0.final-sources.jar=C:\\Users\\user\\Desktop\\mysql-connector-java-5.1.16.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
